--- a/src/AaxAudioConverter/MainForm.de.resx
+++ b/src/AaxAudioConverter/MainForm.de.resx
@@ -146,14 +146,14 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACK
-        AgAAAk1TRnQBSQFMAgEBAgEAAcgBAAHIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8A/wBsAAMDAQQDPAFmAzMBU/AAAx0BKQFaAV0BWgHKAQABagERAf8BAAFq
-        AREB/wMjATTnAAEBA0ABcAE5AWIBSAH2AQABagERAf8BAAFqAREB/wEAAWoBEQH/AVIBVAFSAabkAAEw
-        ATEBMAFNAQABagERAf8BAAFqAREB/wEVAWoBKwH8AVoBXwFaAdsBAAFqAREB/wEhAV8BJwH7AxYBHuAA
-        Ax8BLQFPAWcBVwHyAV4BYQFeAdoDJwE7ASECIgExAQABagERAf8BAAFqAREB/wNKAYzkAAMFAQcDAgED
-        CAABVgFZAVYBvgEAAWoBEQH/AU4BXQFOAfADCgEO8AADMAFMAQABagERAf8BAAFqAREB/wNAAXHzAAEB
-        AVkBXQFZAdcBAAFqAREB/wFXAVwBVwHfAwMBBPAAATwBPQE8AWcBAAFqAREB/wEAAWoBEQH/AzUBVvAA
-        AwcBCQFVAVwBVQHqAQABagERAf8DWwHI9AABRgFHAUYBgQEAAWoBEQH/AQABagERAf8DJAE28AADEQEX
+        AgAAAk1TRnQBSQFMAgEBAgEAAdgBAAHYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8A/wBsAAMDAQQDPAFmAzMBU/AAAx0BKQFaAV0BWgHKAQABaAEPAf8BAAFo
+        AQ8B/wMjATTnAAEBA0ABcAE9AWIBSAH2AQABaAEPAf8BAAFoAQ8B/wEAAWgBDwH/AVIBVAFSAabkAAEw
+        ATEBMAFNAQABaAEPAf8BAAFoAQ8B/wEXAWgBKwH8AVoBXwFaAdsBAAFoAQ8B/wEhAV8BJwH7AxYBHuAA
+        Ax8BLQFTAWcBWQHyAV4BYQFeAdoDJwE7ASECIgExAQABaAEPAf8BAAFoAQ8B/wNKAYzkAAMFAQcDAgED
+        CAABVgFZAVYBvgEAAWgBDwH/AU4BXQFOAfADCgEO8AADMAFMAQABaAEPAf8BAAFoAQ8B/wNAAXHzAAEB
+        AVkBXQFZAdcBAAFoAQ8B/wFXAVwBVwHfAwMBBPAAATwBPQE8AWcBAAFoAQ8B/wEAAWgBDwH/AzUBVvAA
+        AwcBCQFVAVwBVQHqAQABaAEPAf8DWwHI9AABRgFHAUYBgQEAAWgBDwH/AQABaAEPAf8DJAE28AADEQEX
         AU4BXQFOAfABIQFfAScB+wMgAS/0AAMSBBgBIf8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
         AQEFAAGAFwAD/wEABP8EAAT/BAAC/wH8AX8EAAL/AfgBPwQAAv8B4AE/BAAC/wHgAR8EAAL/AeABHwQA
         Av8B8wEPBAAD/wEPBAAD/wEHBAAD/wGHBAAD/wGHBAAD/wHDBAAD/wHDBAAD/wHnBAAE/wQACw==
@@ -347,13 +347,19 @@ für Tags, Ordner und Dateien.</value>
     <value />
   </data>
   <data name="tsmiDetails.Size" type="System.Drawing.Size, System.Drawing">
-    <value>147, 22</value>
+    <value>175, 22</value>
   </data>
   <data name="tsmiDetails.Text" xml:space="preserve">
     <value>Weitere Details</value>
   </data>
+  <data name="tsmiPreview.Size" type="System.Drawing.Size, System.Drawing">
+    <value>175, 22</value>
+  </data>
+  <data name="tsmiPreview.Text" xml:space="preserve">
+    <value>Vorschau / Anpassen</value>
+  </data>
   <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 26</value>
+    <value>176, 48</value>
   </data>
   <data name="contextMenuStrip1.ToolTip" xml:space="preserve">
     <value />
